--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,33 @@ h3{
     position: relative;
     top: 3px;
 }
+
+@media only screen and (max-width: 400px) {
+    .container {
+        width: 90%; 
+    }
+
+    .player-img {
+        width: 200px; 
+        height: 200px;
+        top: 5px; 
+        left: 25%; 
+    }
+
+    .player-controls {
+        left: 35%; 
+    }
+
+    .fa-solid {
+        font-size: 24px;
+    }
+
+    h2 {
+        padding-top: 20px;
+        font-size: 18px;
+    }
+    
+    h3 {
+        font-size: 14px;
+    }
+}
